--- a/etc/consul.d/server/config.json
+++ b/etc/consul.d/server/config.json
@@ -2,6 +2,7 @@
     "advertise_addr": "[SERVER IP]",
     "bind_addr": "[SERVER IP]",
     "domain": "[DOMAIN NAME]",
+    "node_name": "nodename"
     "bootstrap_expect": 3,
     "server": true,
     "datacenter": "[DATACENTRE ID]",
@@ -27,7 +28,7 @@
     "ui_dir": "/home/consul/www",
     "rejoin_after_leave": true,
     "addresses": {
-        "http": "0.0.0.0",
+        "http": "ADDADDRESSHERE",
         "dns": "0.0.0.0"
     }
 }
